--- a/docs/infrastructure/01 服务器搭建.md
+++ b/docs/infrastructure/01 服务器搭建.md
@@ -9,6 +9,7 @@ http://mirrors.gigenet.com
  - CPU2核 内存4G 磁盘40GB
  - 带宽1M
  - CentOS 7
+ - 浙ICP备16037753号
  - 公网IP：47.96.122.101
 ###系统安装
 - 按照阿里云说明操作
