--- a/docs/infrastructure/01 服务器搭建.md
+++ b/docs/infrastructure/01 服务器搭建.md
@@ -13,17 +13,16 @@ http://mirrors.gigenet.com
  - 公网IP：47.96.122.101
 ###系统安装
 - 按照阿里云说明操作
-###SWAP分区设置
+###SWAP分区设置（不推荐设置交换分区）
 ```shell script
 echo '#1 查看`swap`情况'
 cat /proc/swaps
 echo '#2 创建`swap_file`文件（此步骤耗时较长，count推荐设置大小等于内存两倍）'
-dd if=/dev/zero of=/swap_file bs=1M count=8192
+dd if=/dev/zero of=/swap_file bs=8M count=4096
 echo '#3 通过`mkswap`设置为分区文件'
 mkswap /swap_file
 echo '#4 启动`swap`交换分区'
 swapon /swap_file
-echo '`swap`交换分区设置成功'
 ```
 ###SWAP分区启动
 ```bash
@@ -35,6 +34,6 @@ cat /proc/sys/vm/swappiness
 sysctl -a | grep swappiness    
 sysctl -w vm.swappiness=50
 #关闭swap分区
-swapoff /data/swap   
+swapoff /swap_file
 swapoff -a >/dev/null
 ```
